--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -13,14 +13,14 @@
 </div>
 
 <div class="col s12" style="margin-top:1%;">
-  <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-    <%= link_to "Recuperar Contraseña", new_password_path(resource_name), class:"btn indigo" %>
+  <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+    <%= link_to "¿Eres una empresa?", new_user_session_path, class:"btn indigo"%>
   <% end -%>
 </div>
 
 <div class="col s12" style="margin-top:1%;">
-  <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <%= link_to "¿Eres administrador?", new_user_session_path, class:"btn indigo"%>
+  <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
+    <%= link_to "Recuperar Contraseña", new_password_path(resource_name), class:"btn indigo lighten-2" %>
   <% end -%>
 </div>
 
