--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -3,7 +3,7 @@
 <p id="notice"><%= notice %></p>
 
 
-<h5>Lista de Categorías</h5>
+<h5>Lugares</h5>
 
       <ul class="collection z-depth-1">
         <% @categories.each do |category| %>
