--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -74,7 +74,9 @@
     <%= f.text_field :email %>
   </div>
   <div class="actions">
-    <%= f.submit 'Publicar', class:"btn-large green"%>
+    <%= button_to(type: 'submit', id:"btn-post", remote: true, class: "btn blue", onclick:"$('.spinner').show();") do %>
+     <i class="material-icons">check_circle</i>
+    <% end %>
     <p class="grey-text lighten-4">
       (*)Estos campos son obligatorios.
     </p>
