--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -1,5 +1,65 @@
 <div class="container">
-    <% @item.pictures.each do |pic|%>
-    Imagen:<%= pic %>
-    <% end %>
+    <ul class="collection z-depth-1">
+      <li class="collection-item">
+
+        <!--Show pictures-->
+        <% if @item.pictures.count > 1 %>
+          <div class="fotorama" data-nav="thumbs" data-allowfullscreen="true">
+              <% @item.pictures.each do |pic| %>
+                <a href="<%= pic.image.url() %>"><img src="<%= pic.image.url(:thumb)%>"></a>
+              <% end %>
+          </div>
+          <% else %>
+          <% @item.pictures.each do |pic| %>
+          <div class="center">
+            <%= image_tag(pic.image, class:"responsive-img")%>
+          </div>
+            <% end %>
+        <% end %>
+        <!--Show pictures-->
+
+      </li>
+      <li class="collection-item">
+        <table>
+          <thead>
+            <tr>
+                <th data-field="id" class="center">Categoria</th>
+                <th data-field="name" class="center">Publicado</th>
+                <th data-field="price" class="center">Precio</th>
+            </tr>
+          </thead>
+
+          <tbody class="grey lighten-4">
+            <td class="center">
+              <%= @item.market.title %>
+            </td>
+            <td class="center">
+              <%= @item.created_at.strftime("%B %d, %Y")  %>
+            </td>
+            <td class="center">
+              <% if @item.precio == 'cordoba' %>
+              C$
+              <% else %>
+                $
+                <% end %>
+              <%= @item.precio %>
+            </td>
+          </tbody>
+        </table>
+        <h4 class="center"><%= @item.titulo %></h4>
+        <p>
+          <b>Descripción:</b>
+          <%= @item.descripcion %>
+          <br>
+          <b>Estado: </b><%= @item.estado %><br>
+          <b>Dirección: </b><%= @item.ubicacion %><br>
+
+          <br>
+          <b>Contactar al anunciante</b><br>
+          <b>Publicado por: </b><%= link_to @item.client.clientprofile.name, @item.client.clientprofile %><br>
+          <b>Teléfono: </b><%= @item.telefono %><br>
+          <b>Email: </b><%= @item.email %>
+        </p>
+      </li>
+    </ul>
 </div>
