--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,6 +36,24 @@
 </div>
 
 </header>
+<div class="spinner" style="
+z-index: 999;
+position: fixed;
+width: 100%;
+height: 100%;
+">
+  <div class="preloader-wrapper big active" style="margin-left: 38%; margin-top: 50%;">
+    <div class="spinner-layer spinner-blue">
+      <div class="circle-clipper left">
+        <div class="circle"></div>
+      </div><div class="gap-patch">
+        <div class="circle"></div>
+      </div><div class="circle-clipper right">
+        <div class="circle"></div>
+      </div>
+    </div>
+  </div>
+</div>
 <body>
 
 
@@ -46,12 +64,42 @@
   Materialize.toast($toastContent, 8000);
   </script>
 <% end %>
+
   <%= yield%>
+
+
 
 </body>
 
   <div id="fb-root"></div>
-<script>(function(d, s, id) {
+<script>
+$( document ).ready(function() {
+
+  // hide spinner
+  $(".spinner").hide(0);
+
+
+  // show spinner on AJAX start
+  $(document).ajaxStart(function(){
+    $(".spinner").show();
+  });
+
+  // hide spinner on AJAX stop
+  $(document).ajaxStop(function(){
+    $(".spinner").hide(0);
+  });
+
+  $(document).on("page:fetch", function(){
+  $(".spinner").show();
+  });
+
+  $(document).on("page:receive", function(){
+    $(".spinner").hide();
+  });
+
+});
+
+(function(d, s, id) {
   var js, fjs = d.getElementsByTagName(s)[0];
   if (d.getElementById(id)) return;
   js = d.createElement(s); js.id = id;
