--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,12 +1,4 @@
-<% if @posts.count < 1%>
-  <div class="center">
-    <img src="https://cdn3.iconfinder.com/data/icons/map/500/around_me-512.png" alt="" class="responsive-img" />
-    <p>
-      <b class="grey-text darken-4">Esto está un poco vacío. Toca la brújula y encuenta sitios de tu interés.</b>
-    </p>
-  </div>
-<% else %>
-<% @posts.each do |post| %>
+<h5>Tendencias</h5>
   <ul class="collection z-depth-2">
     <li class="collection-item row">
       <img style="vertical-align: middle; margin-left:2%; max-width:50px;" src="<%= post.profile.avatar.url(:mini) %>" alt="" class="circle responsive-img">
@@ -54,9 +46,10 @@
 
     </li>
 
-      <div class="row" style="margin-bottom:0;">
-        <%= div_for(post, class: "col s4 center", style:"max-height: 1px;") do %>
+      <div class="row" style="margin-bottom: 2px;">
+        <%= div_for(post, class: "col s4 center") do %>
             <%= render partial: "hearts/button", locals: {post: post} %>
+            <%= show_likes post %>
           <% end %>
           <div class="col s4 center">
             <%= link_to post do %>
@@ -68,8 +61,6 @@
           </div>
         </div>
    </ul>
-   <% end %>
-   <% end %>
 <!-- fotorama.css & fotorama.js. -->
 <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
 <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
