Add Events to projects
The users can create events and clients can participate... Basicaly xD

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,9 +17,9 @@
       <a href="/menus" class="button-collapse"><i class="material-icons">menu</i></a>
       <div class="row center">
         <a href="/" class="col s2"><i class="material-icons icon-navbar">home</i></a>
-        <a href="#" class="col s2"><i class="material-icons icon-navbar">trending_up <!--span class="badge1">1</span--></i></a>
         <a href= "/categories" class="col s2"><i class="material-icons icon-navbar">explore</i></a>
         <a href="/markets" class="col s2"><i class="material-icons icon-navbar">shopping_basket</i></a>
+        <a href="/events" class="col s2"><i class="material-icons icon-navbar">event<!--span class="badge1">1</span--></i></a>
         <a href="/offers" class="col s2"><i class="material-icons icon-navbar">search</i></a>
       </div>
 
