--- a/app/assets/stylesheets/materialize.css
+++ b/app/assets/stylesheets/materialize.css
@@ -8214,7 +8214,7 @@ select {
 
 .picker__date-display {
   text-align: center;
-  background-color: #b2ebf2;
+  background-color: #3D3DFF;
   color: #fff;
   padding-bottom: 15px;
   font-weight: 300; }
@@ -8291,7 +8291,7 @@ select {
 .picker__close, .picker__today {
   font-size: 1.1rem;
   padding: 0 1rem;
-  color: #b2ebf2; }
+  color: #4D4D4D; }
 
 .picker__nav--prev:before, .picker__nav--next:before {
   content: " ";
