corrections of spelling in Spanish

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -28,7 +28,7 @@
 
   <div class="input-field">
     <%= f.text_area :description, id:"textarea1", class:"materialize-textarea", length:"180", input_html: { hidden: true } %>
-    <label for="textarea1">Descripcion</label>
+    <label for="textarea1">Descripción</label>
   </div>
 
   <div class="file-field input-field">
