check if client signed in

--- a/app/views/profiles/_profile_info.html.erb
+++ b/app/views/profiles/_profile_info.html.erb
@@ -15,13 +15,13 @@
 
     <div class="star-rating" data-score= <%= @avg_review %> ></div>
     <em><%= "#{@reviews.length} valoraciones" %></em>
-    <% if current_client.reviewed?(@profile) %>
+    
+    <% if client_signed_in? && current_client.reviewed?(@profile) %>
       <% @reviews.where(client_id: current_client.id).each do |rev|%>
         <%= link_to "editar", edit_profile_review_path(@profile,rev) %>
       <% end %>
-      <% else %>
-        no
     <% end %>
+
     <table class="striped centered black-text">
       <thead>
         <tr>
