--- a/app/views/follows/_followbtn_client.html.erb
+++ b/app/views/follows/_followbtn_client.html.erb
@@ -1,5 +1,5 @@
 <% if client_signed_in? %>
-  <% if current_client.clientprofile.follow?(profile) %>
+  <% if current_client.follow?(profile) %>
     <%= button_to unfollow_path(profile_id: profile.id), remote: true,id:"follow", class:"btn small green", method: :delete do%>
       <i class="material-icons">check</i>
     <% end %>
