--- a/app/views/profiles/_post_frame.html.erb
+++ b/app/views/profiles/_post_frame.html.erb
@@ -38,9 +38,9 @@
 
     </li>
     <div class="row" style="margin-bottom: 2px;">
-      <%= div_for(post, class: "col s4") do %>
-          <%= render partial: "hearts/button", locals: {post: post} %>
-        <% end %>
+        <%= div_for(post, class: "col s4 center", style:"max-height: 1px;") do %>
+            <%= render partial: "hearts/button", locals: {post: post} %>
+          <% end %>
         <div class="col s4 center">
           <%= link_to post do %>
             <i class="material-icons like-text" style="font-size:2.5rem">forum</i>
