--- a/app/views/reviews/edit.html.erb
+++ b/app/views/reviews/edit.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
   <h5>Dinos que te pareció <%= @profile.name %></h5>
-  <%= render 'form' %>
+  <%= render 'form_nomodal' %>
 </div>
