--- a/app/views/hearts/_button.html.erb
+++ b/app/views/hearts/_button.html.erb
@@ -22,7 +22,7 @@
 <% elsif client_signed_in? %>
 
   <% if current_client.heart?(post)%>
-          <%= button_to unheart_path(post_id: post.id), remote: true, method: :delete, class:"btn-flat", style:"margin-top:0.5rem;" do%>
+          <%= button_to unheart_path(post_id: post.id), remote: true, method: :delete, class:"btn-flat" do%>
 
             <i style="vertical-align: middle; font-size:2.5em;" class="material-icons red-text">favorite</i>
             <% end %>
@@ -30,7 +30,7 @@
 
           <% else %>
 
-            <%= button_to heart_path(post_id: post.id), remote: true, class:"btn-flat", style:"margin-top:0.5rem;" do%>
+            <%= button_to heart_path(post_id: post.id), remote: true, class:"btn-flat" do%>
                 <i style="vertical-align: middle; font-size:2.5em;" class="material-icons">favorite_border</i>
             <% end %>
             <%= show_likes post %>
