--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -45,10 +45,21 @@
 
   </div>
 
+  <!-- Modal Structure -->
+<%= render "reviews/form" %>
+
+
 <!-- fotorama.css & fotorama.js. -->
 <link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
 <script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
 <script>
+$('.modal-trigger').leanModal({
+    dismissible: true, // Modal can be dismissed by clicking outside of the modal
+    opacity: .5, // Opacity of modal background
+    in_duration: 300, // Transition in duration
+    out_duration: 200, // Transition out duration
+  }
+);
     $('.star-rating').raty({
       path: '/assets/',
       readOnly: true,
