--- a/app/views/wikis/index.html.erb
+++ b/app/views/wikis/index.html.erb
@@ -13,7 +13,7 @@
         <%= link_to "Ver más", wiki %>
       </li>
 
-      <li class="collection-item left">
+      <li class="collection-item row center">
           <a href="#" style="margin-left:5%; margin-right:5%;"><i class="material-icons icon-navbar">favorite</i></a>
           <a href="#" style="margin-left:5%; margin-right:5%;"><i class="material-icons icon-navbar">comment</i></a>
           <a href="#" style="margin-left:5%; margin-right:5%;"><i class="material-icons icon-navbar">share</i></a>
