Menu button permanent

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,13 +14,13 @@
   <nav class="blue darken-4">
     <div class="nav-wrapper">
       <!---a href="/" class="brand-logo">Esteli Live</a--->
-      <a href="/menus" class="button-collapse"><i class="material-icons">menu</i></a>
       <div class="row center">
+        <a href="/menus" class="col s2"><i class="material-icons icon-navbar" style="font-size:3rem;">menu</i></a>
         <a href="/" class="col s2"><i class="material-icons icon-navbar">home</i></a>
         <a href= "/categories" class="col s2"><i class="material-icons icon-navbar">explore</i></a>
         <a href="/markets" class="col s2"><i class="material-icons icon-navbar">shopping_basket</i></a>
         <a href="/events" class="col s2"><i class="material-icons icon-navbar">event<!--span class="badge1">1</span--></i></a>
-        <a href="/offers" class="col s2"><i class="material-icons icon-navbar">search</i></a>
+        <a href="/search" class="col s2"><i class="material-icons icon-navbar">search</i></a>
       </div>
 
       <ul class="right hide-on-med-and-down">
