--- a/app/views/offers/_offerts.html.erb
+++ b/app/views/offers/_offerts.html.erb
@@ -1,34 +1,20 @@
-<div class="row">
-
-  <p id="notice"><%= notice %></p>
-
-<div class="container grey-text darken-4">
-    <h5>Ofertas</h5>
-</div>
-
-  <% @offers.each do |offer| %>
-
-<div class="col s6">
-  <ul class="collection">
-    <li class="collection-item">
-      <b><%= offer.titulo %></b>
-      <img src="<%= offer.image.url %>" alt="" class="responsive-img materialboxed" />
-    </li>
-    <li class="collection-item">
-      <%= offer.descripcion %>
-    </li>
-
-    <li class="collection-item blue-text">
-      <% if offer.cordoba == true %>
-        C$:
-        <% else %>
-          $:
-          <% end %>
-      <%= offer.precio %>
-    </li>
-  </ul>
-</div>
-
+<h5>Ofertas</h5>
+  <% @offers.each do  |offer | %>
+      <div  class="card row z-depth-1">
+        <div class="col s5">
+          <%= link_to image_tag(offer.image, class:"responsive-img"), offer %>
+        </div>
+        <div class="col s7">
+          <b><%= offer.titulo %></b> <br>
+          <%= offer.descripcion.first(100) %>...<br>
+          <b>Precio: </b>
+          <% if offer.precio == 'cordoba' %>
+            C$
+          <% else %>
+            $
+            <% end %>
+                <%= offer.precio %>
+                <br>
+        </div>
+      </div>
   <% end %>
-
-</div>
