--- a/app/views/clientprofiles/show.html.erb
+++ b/app/views/clientprofiles/show.html.erb
@@ -48,7 +48,7 @@
   <b>Ubicación: </b><%= @clientprofile.city %>
 </div>
 <div>
-  <p><b>Bigrafía: </b><%= @clientprofile.biography %>
+  <p><b>Biografía: </b><%= @clientprofile.biography %>
   </p>
 </div>
 <% if client_signed_in? %>
