--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,4 +1,3 @@
-<h5>Tendencias</h5>
   <ul class="collection z-depth-2">
     <li class="collection-item row">
       <img style="vertical-align: middle; margin-left:2%; max-width:50px;" src="<%= post.profile.avatar.url(:mini) %>" alt="" class="circle responsive-img">
@@ -36,7 +35,7 @@
           <% end %>
       <% end %>
 
-      <% unless post.video.nil?%>
+      <% if post.video.present? || post.video =! ""%>
           <% if post.pictures.count < 1 %>
             <%= youtube_video post.video %>
             <% else %>
@@ -46,7 +45,7 @@
 
     </li>
 
-      <div class="row" style="margin-bottom: 2px;">
+      <div class="row" style="margin-bottom: 6px;">
         <%= div_for(post, class: "col s4 center") do %>
             <%= render partial: "hearts/button", locals: {post: post} %>
             <%= show_likes post %>
@@ -61,6 +60,4 @@
           </div>
         </div>
    </ul>
-<!-- fotorama.css & fotorama.js. -->
-<link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
+   <link href="//cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet">
