--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,16 +1,16 @@
-<p id="notice"><%= notice %></p>
-
 <div class="container">
 	<h5 class="grey-text darken-4"><%= @category.name %></h5>
 	<% @category.profiles.each do |profile| %>
 
-      <div class="row">
+      <div class="row" style="height:450px;">
           <div class="card">
             <div class="card-image">
 							<%= link_to image_tag(profile.cover.url),profile_path(profile) %>
               <span style="text-shadow: 0px 0px 6px rgba(0, 0, 0, 1);" class="card-title text_transp"><%= profile.name %></span>
+
             </div>
             <div class="card-content">
+							<div class="star-rating" data-score= <%= profile.reviews.average(:rating) %> ></div>
               <p><%= profile.body %></p>
             </div>
             <div class="card-action">
@@ -29,3 +29,12 @@
 <% end %>
 </div>
 </div>
+<script>
+$('.star-rating').raty({
+	path: '/assets/',
+	readOnly: true,
+	score: function() {
+				return $(this).attr('data-score');
+}
+});
+</script>
