--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -5,7 +5,7 @@
   <div class="col s12">
     <ul class="tabs blue-text">
       <li class="tab col s3"><a href="#tab1">Publicaciones</a></li>
-      <li class="tab col s3"><a class="active" href="#tab2">Ofertas</a></li>
+      <li class="tab col s3"><a href="#tab2">Ofertas</a></li>
       <li class="tab col s3"><a href="#tab3">Galería</a></li>
     </ul>
   </div>
@@ -44,14 +44,21 @@
     </div>
 
   </div>
+  <% if user_signed_in? && current_user.id == @profile.user_id %>
+    <div class="z-depth-1">
+      <div class="fixed-action-btn" style="bottom: 45px; right: 24px;">
+        <a href="#modal1" class="modal-trigger btn-floating btn-large red">
+          <i class="large material-icons">mode_edit</i>
+
+      </a>
+    </div>
+    <%= render "posts/form" %>
+  <% end %>
 
   <!-- Modal Structure -->
 <%= render "reviews/form" %>
 
 
-<!-- fotorama.css & fotorama.js. -->
-<link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
 <script>
 $('.modal-trigger').leanModal({
     dismissible: true, // Modal can be dismissed by clicking outside of the modal
