--- a/app/views/welcome/_posts.html.erb
+++ b/app/views/welcome/_posts.html.erb
@@ -43,8 +43,7 @@
         </div>
           <% end %>
       <% end %>
-
-      <% unless post.video.nil?%>
+      <% if post.video.present? || post.video =! ""%>
           <% if post.pictures.count < 1 %>
             <%= youtube_video post.video %>
             <% else %>
@@ -54,7 +53,7 @@
 
     </li>
 
-      <div class="row" style="margin-bottom:0;">
+      <div class="row" style="margin-bottom:6;">
         <%= div_for(post, class: "col s4 center", style:"max-height: 1px;") do %>
             <%= render partial: "hearts/button", locals: {post: post} %>
           <% end %>
@@ -70,6 +69,3 @@
    </ul>
    <% end %>
    <% end %>
-<!-- fotorama.css & fotorama.js. -->
-<link  href="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.css" rel="stylesheet"> <!-- 3 KB -->
-<script src="http://cdnjs.cloudflare.com/ajax/libs/fotorama/4.6.4/fotorama.js"></script> <!-- 16 KB -->
