--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -65,7 +65,6 @@ position: relative;
       /* right:0px; */
       margin-top: 262px;
       margin-right: -10px;
-  "
 }
 
 /*Tex size of lateral bar*/
@@ -99,19 +98,6 @@ position: relative;
   vertical-align: -webkit-baseline-middle;
 }
 
-/*html, body {
-  background:#2196f3;
-    /*background:url("/assets/login.jpg");
-    background-repeat:repeat-y;
-
-    background-position:top center;
-
-    background-attachment:fixed
-
-    background-size:cover;
-
-}*/
-
 /*Pagination*/
 .apple_pagination {
   background: #f1f1f1;
@@ -140,3 +126,123 @@ position: relative;
     color: black; }
     .apple_pagination a:hover, .apple_pagination a:focus {
       text-decoration: underline; }
+
+/*ADMIN SIDEBAR*/
+.mini-img{
+  width: 50px;
+  height: 50px;
+}
+
+.main-sidebar{
+  position: relative;
+  width: 230px;
+  background-color: #222d32;
+  height: 100vh;
+  float: left;
+  margin-right: 1%;
+}
+.side-blue{
+  background-color: #3c8dbc;
+  margin-top: 0px;
+}
+.li-sidebar{
+    font-size: 14px;
+    font-size: 12px;
+    overflow: hidden;
+    text-overflow: clip;
+    list-style: none;
+}
+.li-sidebar a{
+  color: #b8c7ce;
+  padding: 12px 5px 12px 15px;
+  display: block;
+  cursor: auto;
+}
+.li-title{
+  padding: 10px 25px 10px 15px;
+  color: #4b646f;
+  background: #1a2226;
+}
+.icon-middle{
+  margin-right: 10%;
+  vertical-align: middle;
+}
+hl{
+  margin: 0;
+  font-size: 24px;
+  color: #424242;
+}
+.content{
+    min-height: 250px;
+    padding: 15px;
+    margin-right: auto;
+    margin-left: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+.content-wrapper{
+  margin-left: 230px;
+  background-color: #ecf0f5;
+  height: 100vh;
+}
+
+.stats-label{
+  background-color: #d2d6de;
+  margin: 1%;
+}
+
+.info-box{
+  display: block;
+  min-height: 90px;
+  background: #fff;
+  width: 100%;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+  border-radius: 2px;
+  margin-bottom: 15px;
+}
+.info-box-icon{
+  border-top-left-radius: 2px;
+    border-top-right-radius: 0;
+    border-bottom-right-radius: 0;
+    border-bottom-left-radius: 2px;
+    display: block;
+    float: left;
+    height: 90px;
+    width: 90px;
+    text-align: center;
+    line-height: 90px;
+}
+.info-box-content{
+  font-size: 18px;
+  padding: 10px 10px;
+  margin-left: 90px;
+}
+.panel-box{
+  position: relative;
+  border-radius: 3px;
+  background: #ffffff;
+  border-top: 3px solid #d2d6de;
+  margin-bottom: 20px;
+  width: 100%;
+  box-shadow: 0 1px 1px rgba(0,0,0,0.1);
+  padding: 10px;
+}
+.box-header {
+    color: #444;
+    display: block;
+    position: relative;
+    border-bottom: 1px solid #f4f4f4;
+}
+.only-header{
+  background: #ffffff;
+  border-radius: 3px;
+  border-top: 3px solid #d2d6de;
+  padding: 5px;
+}
+.user_list{
+  width: 25%;
+  float: left;
+  padding: 10px;
+  text-align: center;
+}
+/*ADMIN SIDEBAR*/
